--- a/tables.html
+++ b/tables.html
@@ -2,21 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Health App Login</title>
+  <title>Health Monitor App</title>
   <link rel = "stylesheet" type="text/css" href = "css/style.css" >
   <link rel = "stylesheet" type="text/css" href="css/sb-admin-2.min.css" >
   <link href="/handsontable/handsontable.full.min.css" rel="stylesheet" media="screen">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel = "stylesheet" type="text/css" href = "css/style.css" >
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   
 </head>
 <body id="page-top">
-  <div id ="logout-button" class="topnav">
+  <div id="logout-report-buttons" class="topnav">
     <form action="/tables/Logout" method="POST">
-      <button type="Logout">Logout</button>
+      <button type="submit" name="action" value="logout">Logout</button>
     </form>
+    <form action="/tables/Report" method="POST">
+      <button type="submit" name="action" value="logout">Report</button>
+    </form>
+  </div>
+  
+  <div id="logo-container">
+    <h1>HealthCare App</h1>
   </div>
 
   <!-- Page Content Beginning-->
@@ -39,7 +47,7 @@
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
 
-                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Net Calories</div>
+                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Body Temperature</div>
                 <div id="calorie-card" class="h5 mb-0 font-weight-bold text-gray-800">0</div>
               </div>
               <div class="col-auto">
@@ -56,7 +64,7 @@
           <div class="card-body">
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Weight</div>
+                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Heart Rate</div>
                 <div id="weight-card" class="h5 mb-0 font-weight-bold text-gray-800">0</div>
               </div>
               <div class="col-auto">
@@ -107,7 +115,7 @@
       <div class="card shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Net Colories</h6>
+          <h6 class="m-0 font-weight-bold text-primary">Net Calories</h6>
         </div>
         <!-- Card Body -->
         <div class="card-body">
@@ -135,10 +143,10 @@
     </div>
   </div>
   <!-- Content Row -->
-  <div class="row">
+  <div class="row full-width-row">
 
     <!-- Content Column -->
-    <div class="col-lg-6 mb-4">
+    <div class="col-xl-8 col-lg-7">
 
       <!-- Project Card Example -->
       <div class="card shadow mb-4">
@@ -150,8 +158,11 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="row full-width-row">
     <!--Other column -->
-    <div class="col-lg-6 mb-4">
+    <div class="col-xl-8 col-lg-7">
 
       <!-- Form -->
       <div class="card shadow mb-4">
@@ -193,10 +204,10 @@
                   <input type="number" min="50" max="1000" name="Weight" placeholder="Weight" id="Weight" required/>
               </div>
               <div>
-                  <input type="number" min="0" max="6000" name="CaloriesIn" placeholder="Calorie Intake" id="CaloriesIn" required/>
+                  <input type="number" min="0" max="6000" name="CaloriesIn" placeholder="Body Temperature" id="CaloriesIn" required/>
               </div>
               <div>
-                  <input type="number" min="0"  max="6000" name="CaloriesOut" placeholder="Calorie Expenditure" id="CaloriesOut" required/>
+                  <input type="number" min="0"  max="6000" name="CaloriesOut" placeholder="Heart Rate" id="CaloriesOut" required/>
               </div>
               <p>
                   <input type="submit" value="Send" />
@@ -211,7 +222,7 @@
     </div>
   </div>
 
-  </div>
+</div>
 
   
   
