--- a/tables.html
+++ b/tables.html
@@ -75,28 +75,28 @@
         </div>
       </div>
 
-      <!-- Excercise -->
+      <!-- Gender -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-info shadow h-100 py-2">
           <div class="card-body">
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Excercise</div>
-                <div id="activity-card"class="h5 mb-0 font-weight-bold text-gray-800">0 Minutes</div>
+                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Gender</div>
+                <div id="age-card"class="h5 mb-0 font-weight-bold text-gray-800"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Latest Entry / BMI -->
+      <!-- Age -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-warning shadow h-100 py-2">
           <div class="card-body">
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Last Entry</div>
-                <div id="date-card" class="h5 mb-0 font-weight-bold text-gray-800">No Previous Entry</div>
+                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Age</div>
+                <div id="date-card" class="h5 mb-0 font-weight-bold text-gray-800">0</div>
               </div>
               <div class="col-auto">
                 <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -108,16 +108,12 @@
     </div>
 
     <!-- Content Row -->
-  <div class="row">
-
-    <!-- Area Chart -->
+  <!-- <div class="row">
     <div class="col-xl-8 col-lg-7">
       <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
           <h6 class="m-0 font-weight-bold text-primary">Net Calories</h6>
         </div>
-        <!-- Card Body -->
         <div class="card-body">
           <div class="chart-area">
             <div id="scatter-plot"></div>
@@ -125,41 +121,19 @@
         </div>
       </div>
     </div>
-
-    <!-- Pie Chart -->
     <div class="col-xl-4 col-lg-5">
       <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
           <h6 class="m-0 font-weight-bold text-primary">Activities</h6>
         </div>
-        <!-- Card Body -->
         <div class="card-body">
           <div class="chart-pie pt-4 pb-2">
             <div id="myPieChart"></div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
-  <!-- Content Row -->
-  <div class="row full-width-row">
-
-    <!-- Content Column -->
-    <div class="col-xl-8 col-lg-7">
-
-      <!-- Project Card Example -->
-      <div class="card shadow mb-4">
-        <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">Logs</h6>
-        </div>
-        <div class="card-body">
-          <div id="table"></div> 
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="row full-width-row">
     <!--Other column -->
     <div class="col-xl-8 col-lg-7">
@@ -173,9 +147,9 @@
           <div class="input-form">
             <form action="/tables/Input" method="post">
               <input type="Date" name="Date" placeholder="Date" id="Date" required/>
-              <div>
-                  <select name="Activity" default="Other" id="Activity" placeholder="Select Activity" required>
-                    <option value="" selected disabled hidden> Select an Activity  </option> 
+              <!-- <div>
+                  <select name="age" default="Other" id="age" placeholder="Select age" required>
+                    <option value="" selected disabled hidden> Select an age  </option> 
                     <option value="Running">Running</option>
                     <option value="Walking">Walking</option>
                     <option value="Dancing">Dancing</option>
@@ -196,18 +170,21 @@
                     <option value="Other - Flexibility">Other - Muscle-strengthening</option>
                     <option value="Other">Other - Not Listed</option>
                   </select>
+              </div> -->
+              <div>
+                <input type="number" min="0" max="100" name="age" placeholder="age" id="Age" required/>
               </div>
               <div>
-                <input type="number" min="0" max="600" name="Minutes" placeholder="Minutes" id="Minutes" required/>
+                <input type="text" name="Gender" placeholder="gender" id="Gender" required/>
               </div>
               <div>
-                  <input type="number" min="50" max="1000" name="Weight" placeholder="Weight" id="Weight" required/>
+                  <input type="number" min="30" max="150" name="Weight" placeholder="Weight" id="Weight" required/>
               </div>
               <div>
-                  <input type="number" min="0" max="6000" name="CaloriesIn" placeholder="Body Temperature" id="CaloriesIn" required/>
+                  <input type="number" min="30" max="150" name="BodyTemp" placeholder="Body Temperature" id="BodyTemp" required/>
               </div>
               <div>
-                  <input type="number" min="0"  max="6000" name="CaloriesOut" placeholder="Heart Rate" id="CaloriesOut" required/>
+                  <input type="number" min="30"  max="200" name="HeartRate" placeholder="Heart Rate" id="HeartRate" required/>
               </div>
               <p>
                   <input type="submit" value="Send" />
@@ -215,13 +192,28 @@
             </form>
 
           </div>
-        
         </div>
       </div>
 
     </div>
   </div>
+  <!-- Content Row -->
+  <div class="row full-width-row">
 
+    <!-- Content Column -->
+    <div class="col-xl-8 col-lg-7">
+
+      <!-- Project Card Example -->
+      <div class="card shadow mb-4">
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Logs</h6>
+        </div>
+        <div class="card-body">
+          <div id="table"></div> 
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
   
