--- a/tables.html
+++ b/tables.html
@@ -12,7 +12,6 @@
   <link rel = "stylesheet" type="text/css" href = "css/style.css" >
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="stats-card.js"></script>
 </head>
 <body id="page-top">
   <div id="logout-report-buttons" class="topnav">
@@ -52,7 +51,7 @@
               <div class="col mr-2">
 
                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Body Temperature</div>
-                <div id="bodytemp-card" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                <div id="bodytemp-card" class="h5 mb-0 font-weight-bold text-gray-800">-</div>
               </div>
               <div class="col-auto">
                 <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -69,7 +68,7 @@
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Heart Rate</div>
-                <div id="heart-card" class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                <div id="heart-card" class="h5 mb-0 font-weight-bold text-gray-800">-</div>
               </div>
               <div class="col-auto">
                 <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -86,7 +85,7 @@
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
                 <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Gender</div>
-                <div id="gender-card"class="h5 mb-0 font-weight-bold text-gray-800">male</div>
+                <div id="gender-card"class="h5 mb-0 font-weight-bold text-gray-800">-</div>
               </div>
             </div>
           </div>
@@ -100,7 +99,7 @@
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
                 <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Age</div>
-                <div id="age-card" class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                <div id="age-card" class="h5 mb-0 font-weight-bold text-gray-800">-</div>
               </div>
               <div class="col-auto">
                 <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -110,37 +109,10 @@
         </div>
       </div>
     </div>
-
-    <!-- Content Row -->
-  <!-- <div class="row">
-    <div class="col-xl-8 col-lg-7">
-      <div class="card shadow mb-4">
-        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Net Calories</h6>
-        </div>
-        <div class="card-body">
-          <div class="chart-area">
-            <div id="scatter-plot"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-4 col-lg-5">
-      <div class="card shadow mb-4">
-        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Activities</h6>
-        </div>
-        <div class="card-body">
-          <div class="chart-pie pt-4 pb-2">
-            <div id="myPieChart"></div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
   <div class="row full-width-row">
     <!--Other column -->
-    <div class="col-xl-8 col-lg-7">
+    <div class="col-xl-8 col-lg-7" style="margin: 0 auto;">
 
       <!-- Form -->
       <div class="card shadow mb-4">
@@ -151,44 +123,14 @@
           <div class="input-form">
             <form action="/tables/Input" method="post">
               <input type="Date" name="Date" placeholder="Date" id="Date" required/>
-              <!-- <div>
-                  <select name="age" default="Other" id="age" placeholder="Select age" required>
-                    <option value="" selected disabled hidden> Select an age  </option> 
-                    <option value="Running">Running</option>
-                    <option value="Walking">Walking</option>
-                    <option value="Dancing">Dancing</option>
-                    <option value="Swimming">Swimming</option>
-                    <option value="Biking">Biking</option>
-                    <option value="Hiking">Hiking</option>
-                    <option value="Tennis">Tennis</option>
-                    <option value="Basketball">Basketball</option>
-                    <option value="Soccer">Soccer</option>
-                    <option value="Football">Football</option>
-                    <option value="Yoga">Yoga</option>
-                    <option value="Pilates">Pilates</option>
-                    <option value="Weight Training">Weight Training</option>
-                    <option value="Calisthenics">Calisthenics</option>
-                    <option value="Other - Flexibility">Other - Sport</option>
-                    <option value="Other - Aerobic">Other - Aerobic</option>
-                    <option value="Other - Flexibility">Other - Flexibility</option>
-                    <option value="Other - Flexibility">Other - Muscle-strengthening</option>
-                    <option value="Other">Other - Not Listed</option>
-                  </select>
-              </div> -->
-              <div>
-                <input type="number" min="0" max="100" name="Age" placeholder="age" id="Age" required/>
-              </div>
-              <div>
-                <input type="text" name="Gender" placeholder="gender" id="Gender" required/>
-              </div>
-              <div>
-                  <input type="number" min="30" max="150" name="Weight" placeholder="Weight" id="Weight" required/>
-              </div>
               <div>
                   <input type="number" min="30" max="150" name="BodyTemp" placeholder="Body Temperature" id="BodyTemp" required/>
               </div>
               <div>
                   <input type="number" min="30"  max="200" name="HeartRate" placeholder="Heart Rate" id="HeartRate" required/>
+              </div>
+              <div>
+                <input type="text" name="Prediction" placeholder="Prediction" id="Prediction" required/>
               </div>
               <p>
                   <input type="submit" value="Send" />
@@ -205,7 +147,7 @@
   <div class="row full-width-row">
 
     <!-- Content Column -->
-    <div class="col-xl-8 col-lg-7">
+    <div class="col-xl-8 col-lg-7" style="margin: 0 auto;">
 
       <!-- Project Card Example -->
       <div class="card shadow mb-4">
